# banking-agent-handoffkit

./: .gitignore  EPIC_4_TRANSITION.md  ORCHESTRATOR_INTEGRATION_SUMMARY.md  README.md  alembic.ini  brief.md  fix_orchestrator.py  pyproject.toml  standalone_routing_test.py  test_orchestrator_integration.py  test_routing_direct.py  test_routing_modules.py  test_routing_simple.py  test_routing_standalone.py
_bmad-output/: architecture.md  bmm-workflow-status.yaml  prd.md
_bmad-output/excalidraw-diagrams/: handoffkit-dashboard-wireframes.excalidraw  handoffkit-functional-requirements-flow.excalidraw  (+2 more)
alembic/: env.py
docs/: routing_rules_cheatsheet.md  routing_rules_guide.md
examples/: README.md  RUNNING_SUMMARY.md  routing_rules_examples.py  run_routing_examples.py  use_routing_rules.py
handoffkit/: __init__.py
scripts/: create_api_key.py
tests/: __init__.py  conftest.py  test_agent_availability.py  test_api_auth.py  test_api_check.py  test_api_docs.py  test_api_handoff.py  test_api_status.py  test_cloud_llm_analyzer.py  test_config.py  test_config_loader.py  test_conversation_packager.py  test_conversation_summarizer.py  test_custom_rule_trigger.py  test_degradation_integration.py  test_degradation_tracking.py  test_direct_request_trigger.py  test_entity_extractor.py  test_failure_tracking_trigger.py  test_fallback_infrastructure.py  test_fallback_orchestrator.py  test_frustration_signals.py  test_generic_markdown_adapters.py  test_intercom_integration.py  test_keyword_trigger.py  test_local_llm_analyzer.py  test_logging.py  test_metadata_collector.py  test_metadata_integration.py  test_orchestrator.py  test_orchestrator_agent_assignment.py  test_orchestrator_integration.py  test_package.py  test_rate_limiter.py  test_round_robin_assignment.py  test_routing_rules.py  test_sentiment_rule_based.py  test_types.py  test_zendesk_integration.py
(+119 files in other folders)
