[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handoffkit"
version = "0.1.0"
description = "AI-to-human handoff orchestration for conversational AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "HandoffKit Team", email = "team@handoffkit.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
]
dashboard = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/handoffkit/handoffkit"
Documentation = "https://handoffkit.io/docs"
Repository = "https://github.com/handoffkit/handoffkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["handoffkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
